[tool.poetry]
name = "skit-memex"
version = "0.1.0"
description = ""
authors = []
readme = "README.org"

[tool.poetry.dependencies]
python = "^3.11"
slack-sdk = "^3.26.0"
websocket = "^0.2.1"
requests = "^2.31.0"
openai = "^1.3.6"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[tool.poetry.scripts]
memex = "skit_memex.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
